--- a/translations/castle_greek_gift.tex/fr.po
+++ b/translations/castle_greek_gift.tex/fr.po
@@ -146,7 +146,7 @@ msgid ""
 "\\textbf{Author:} Tyson Heckert\n"
 "\n"
 msgstr ""
-"\\textbf{Auteur:} Tyson Heckert\n"
+"\\textbf{Auteur :} Tyson Heckert\n"
 "\n"
 
 #. type: multicols*
@@ -169,7 +169,7 @@ msgid ""
 "While Catherine grapples with her responsibility — and her demons — she must be a bulwark against evil.}\n"
 "\n"
 msgstr ""
-"\\textit{Steadwick est libre, mais nous ne sommes pas en sécurité.\n"
+"\\textit{Steadwick est libre, mais cela ne veut pas dire que nous sommes en sécurité.\n"
 "De sombres puissances errent toujours en Erathia et l'une d'elles déplace déjà ses pions sur l'échiquier.\n"
 "Alors que Catherine se débat avec ses responsabilités — et ses démons — elle doit être le rempart contre le mal.}\n"
 "\n"
@@ -225,7 +225,7 @@ msgid ""
 "\\textbf{Faction Hero:} Any Castle Hero. If you are not Catherine, you are in her entourage for this story.\n"
 "\n"
 msgstr ""
-"\\textbf{Héros de Faction:} Un Héros Château. Si vous n'êtes pas, vous êtes dans son entourage pour cette histoire.\n"
+"\\textbf{Héros de Faction :} Un Héros Château. Si vous n'êtes pas Catherine, vous êtes dans son entourage pour cette histoire.\n"
 "\n"
 
 #. type: multicols*
@@ -433,7 +433,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{Manche 1:}\n"
+"\\textbf{Manche 1 :}\n"
 "\\begin{itemize}\n"
 "  \\item Lisez la section «Menace Lointaine»\n"
 "\\end{itemize}\n"
@@ -449,7 +449,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{En entrant dans l'Enclave sur F3:}\n"
+"\\textbf{En entrant dans l'Enclave sur F3 :}\n"
 "\\begin{itemize}\n"
 "  \\item Lisez la section «Alliés Révérencieux»\n"
 "\\end{itemize}\n"
@@ -465,7 +465,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{Avant le combat contre le Héros Ennemi:}\n"
+"\\textbf{Avant le combat contre le Héros Ennemi :}\n"
 "\\begin{itemize}\n"
 "  \\item Lisez la section «Appât et Leurre»\n"
 "\\end{itemize}\n"
@@ -481,7 +481,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{Quand vous complétez le Scénario:}\n"
+"\\textbf{Quand vous complétez le Scénario :}\n"
 "\\begin{itemize}\n"
 "  \\item Lisez la section «La Poursuite Commence»\n"
 "\\end{itemize}\n"
@@ -607,7 +607,7 @@ msgid ""
 "\n"
 msgstr ""
 "Le poids d'Erathia repose sur ses épaules.\n"
-"Quelques semaines ont passés depuis le siège et la recapture de Steadwick, main d'œuvre comme ressources manquaient.\n"
+"Quelques semaines ont passé depuis le siège et la recapture de Steadwick, main-d'œuvre comme ressources manquaient.\n"
 "Mais, avec du temps, le trône de pierre serait suffisant pour libérer le royaume.\n"
 "\n"
 
@@ -624,7 +624,7 @@ msgstr ""
 "Un de ces problèmes pesait sur son esprit.\n"
 "Laissant son médaillon pour sa missive, elle relut un certain passage traitant de l'ascension d'un nécromancien nommé Vhidhax.\n"
 "Selon les rumeurs, ce démon aurait volé de précieux artefacts renforçant son pouvoir sur les morts.\n"
-"Même si les rumeurs sont plutôt pour les commères et les enfants, celle-ci sont confirmées par des rapports sur une armée de plus en plus forte et elle redoutait que ces deux problèmes s'associent et s'écrasent sur sa couronne fatiguée.\n"
+"Même si les rumeurs sont plutôt pour les commères et les enfants, celles-ci sont confirmées par des rapports sur une armée de plus en plus forte et elle redoutait que ces deux problèmes s'associent et s'écrasent sur sa couronne fatiguée.\n"
 "\n"
 
 #. type: multicols*
@@ -700,7 +700,7 @@ msgid ""
 "Her gaze snapped upward to catch sight of something approaching.\n"
 "\n"
 msgstr ""
-"Alors que Catherine avait une confiance absolu  envers son cheval, ayant vécu de nombreuses batailles ensemble, celui-ci tremblait d'hésitation alors qu'ils approchaient du majestueux bâtiment principal à colonnes de l'Enclave.\n"
+"Alors que Catherine avait une confiance absolue envers son cheval, ayant vécu de nombreuses batailles ensemble, celui-ci tremblait d'hésitation alors qu'ils approchaient du majestueux bâtiment principal à colonnes de l'Enclave.\n"
 "Catherine avait aussi ressenti la puissance sacrée presque troublante qui régnait ici, soudain, le bruit d'ailes battantes attira son attention.\n"
 "Son regard se leva brusquement et aperçut quelque chose approchant.\n"
 "\n"
@@ -715,7 +715,7 @@ msgid ""
 "It caught Catherine's horse off guard, and she had to catch the reins and wrench them hard to steady herself and calm the frightened animal before it could fling her from her seat.\n"
 "\n"
 msgstr ""
-"Le soleil matinale brillait et la forme ailée qui plongeait bas se trouvait devant lui.\n"
+"Le soleil matinal brillait et la forme ailée qui plongeait bas se trouvait devant lui.\n"
 "La silhouette ailée était visible, et Catherine pensa d'abord à un Griffon.\n"
 "Cependant alors qu'il s'approchait, il devint clair qu'il s'agissait plutôt du contour d'un homme ailé.\n"
 "Catherine fut prise au dépourvu, elle dut rattraper les rênes et les tirer violemment pour se stabiliser et calmer l'animal effrayé avant qu'il ne la fasse tomber de sa selle.\n"
@@ -744,9 +744,9 @@ msgid ""
 "I expected you might come when I spied the rot taking form in the hills.''\n"
 "\n"
 msgstr ""
-"D'un voix plus grave et plus retentissante que n'importe quel homme, l'ange fut le premier à parler.\n"
-"«Reine Catherine.\n"
-"J'attendait votre venue en voyant cette pourriture prendre forme sur la colline.»\n"
+"D'une voix plus grave et plus retentissante que n'importe quel homme, l'ange fut le premier à parler.\n"
+"« Reine Catherine.\n"
+"J'attendais votre venue en voyant cette pourriture prendre forme sur la colline. »\n"
 "\n"
 
 #. type: multicols*
@@ -762,9 +762,9 @@ msgid ""
 msgstr ""
 "Catherine répondit avec un sourire.\n"
 "C'était bon de voir qu'elle avait encore des alliés; ses forces auraient besoin de renfort pour affronter les morts-vivants.\n"
-"«Il est bon de te voir, mon ami.» dit-elle.\n"
-"Il semble que Steadwick soit encore menacé et je pars pour éradiquer le mal avant qu'il ne s'étende.\n"
-"Voulez vous vous joindre à moi?»\n"
+"« Il est bon de te voir, mon ami. » dit-elle.\n"
+"Il semble que Steadwick soit à nouveau menacé et je pars pour éradiquer le mal avant qu'il ne s'étende.\n"
+"Voulez-vous vous joindre à moi ? »\n"
 "\n"
 
 #. type: multicols*
@@ -778,8 +778,8 @@ msgid ""
 "Catherine smiled wide as she watched more angels appear, then looked back to her forces and extended an open palmed arm forward in a command to march.\n"
 "\n"
 msgstr ""
-"«Bien sûr, ma Reine!» aboya l'ange.\n"
-"«Ensemble, aucun mal n'arrêtera notre avancée!» Ces derniers mots quittant ses lèvres, il dégaina son arme.\n"
+"« Bien sûr, ma Reine ! » aboya l'ange.\n"
+"« Ensemble, aucun mal n'arrêtera notre avancée ! » Ces derniers mots quittant ses lèvres, il dégaina son arme.\n"
 "Son épée s'enflamma en sortant de son fourreau et sa gloire flamboyante fit détourner le regard aux agenouillés.\n"
 "Aussitôt après, il s'envola et recommença à voler en cercle au-dessus.\n"
 "Catherine eut un large sourire en voyant plus d'anges apparaître, puis se tourna vers ses troupes et tendit le bras, paume ouverte, pour ordonner la marche.\n"
@@ -815,8 +815,8 @@ msgid ""
 "With a thunderous crash, she slammed past the forward lines, knocking off limbs and cracking bones.\n"
 "\n"
 msgstr ""
-"Catherine brûlait d'envie de transpercer le cœur du Dragons Fantôme, puis de trancher la tête de celui qui le commandait.\n"
-"Elle éperonna sa puissante monture, chargeant et narguant les ennemies qui l'attendaient.\n"
+"Catherine brûlait d'envie de transpercer le cœur du Dragon Fantôme, puis de trancher la tête de celui qui le commandait.\n"
+"Elle éperonna sa puissante monture, chargeant et narguant les ennemis qui l'attendaient.\n"
 "Impossible d'ignorer la multitude de morts-vivants titubants, pour la plupart des citoyens ranimés des bourgades voisines, ils ne l'arrêteraient pas.\n"
 "Dans un fracas assourdissant, elle franchit les premières lignes, arrachant des membres et brisant des os.\n"
 "\n"
@@ -851,7 +851,7 @@ msgid ""
 "\n"
 msgstr ""
 "Étonnamment, au lieu de percuter la bête de plein fouet, l'ange la traversa comme si elle était faite d'air.\n"
-"Il s'écrasa au sol dans un bruit sourd avant que, soudain, l'image du dragon se mis à vaciller et à scintiller, puis à se désintégrer.\n"
+"Il s'écrasa au sol dans un bruit sourd avant que, soudain, l'image du dragon se mît à vaciller et à scintiller, puis à se désintégrer.\n"
 "Les Chevaliers de l'Effroi subirent le même sort, remplacés par des hordes de morts-vivants qui menaçaient désormais d'encercler Catherine et ses troupes.\n"
 "\n"
 
@@ -876,7 +876,7 @@ msgid ""
 "\n"
 msgstr ""
 "C'était un piège.\n"
-"Le nécromancien et ses plus puissantes armées étaient absents, et Catherine devraient se frayer un chemin à travers une horde de morts-vivants, perdant un temps précieux et des vies.\n"
+"Le nécromancien et ses plus puissantes armées étaient absents, et Catherine devrait se frayer un chemin à travers une horde de morts-vivants, perdant un temps précieux et des vies.\n"
 "\n"
 
 #. type: multicols*
@@ -891,9 +891,9 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"  \\item \\textcolor{darkcandyapplered}{Remplacez le Dragon Fantome et le Chevalier de l'Effroi par des Zombies et Squelettes \\svg{bronze} neutres.}\n"
+"  \\item \\textcolor{darkcandyapplered}{Remplacez le Dragon Fantôme et le Chevalier de l'Effroi par des Zombies et Squelettes \\svg{bronze} neutres.}\n"
 "  \\item \\textcolor{darkcandyapplered}{Jouez «Cape du Roi Mort-Vivant IV» et «Cape du Roi Mort-Vivant VI» sur les Groupes Zombies et Squelettes respectivement.}\n"
-"  \\item \\textcolor{darkcandyapplered}{Retirez le Deck IA du jeu, les morts vivant combattent sans.}\n"
+"  \\item \\textcolor{darkcandyapplered}{Retirez le Deck IA du jeu, les morts-vivants combattent sans.}\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -968,7 +968,7 @@ msgid ""
 "\n"
 msgstr ""
 "Juste avant de se tourner vers ses troupes se regroupant, Catherine aperçut au loin la lueur bleue spectrale du véritable Dragon Fantôme.\n"
-"Sa mission, detruire les défenses de Steadwick, était accomplie.\n"
+"Sa mission, détruire les défenses de Steadwick, était accomplie.\n"
 "\n"
 
 #. type: multicols*
@@ -980,7 +980,7 @@ msgid ""
 "\n"
 msgstr ""
 "Des archanges tournoyaient au-dessus d'elle, et Catherine leva la tête vers le ciel, les larmes aux yeux à l'idée de perdre ce qu'elle avait bâti avec tant d'efforts.\n"
-"«Retrouvez-le!» rugit-elle, s'adressant aux dieux et aux anges qui l'entendaient.\n"
+"« Retrouvez-le ! » rugit-elle, s'adressant aux dieux et aux anges qui l'entendaient.\n"
 "\n"
 
 #. type: multicols*
@@ -990,7 +990,7 @@ msgid ""
 "``Is that… wise?'' Rion asked softly.\n"
 "\n"
 msgstr ""
-"«Est-ce… sage?» demanda doucement Rion.\n"
+"« Est-ce… sage ? » demanda doucement Rion.\n"
 "\n"
 "\n"
 
@@ -1005,9 +1005,9 @@ msgid ""
 "\n"
 msgstr ""
 "Catherine répondit avec une rage incandescente.\n"
-"«À quoi bon reconstruire si le démon ne fera que continuer à jouer ses tours ?» dit-elle.\n"
-"«Non.\n"
-"Si nous voulons sauver Steadwick, nous devons l'éliminer avant qu'il ne puisse se renforcer davantage.»\n"
+"« À quoi bon reconstruire si le démon ne fera que continuer à jouer ses tours ? » dit-elle.\n"
+"« Non.\n"
+"Si nous voulons sauver Steadwick, nous devons l'éliminer avant qu'il ne puisse se renforcer davantage. »\n"
 "\n"
 
 #. type: multicols*
