--- a/translations/dragoncurse_castle.tex/fr.po
+++ b/translations/dragoncurse_castle.tex/fr.po
@@ -143,7 +143,7 @@ msgid ""
 "\\textbf{Author:} profmamadu\n"
 "\n"
 msgstr ""
-"\\textbf{Auteur:} profmamadu\n"
+"\\textbf{Auteur :} profmamadu\n"
 "\n"
 
 #. type: multicols*
@@ -286,7 +286,7 @@ msgid ""
 "\n"
 msgstr ""
 "\\subsection*{\\MakeUppercase{Conditions de Défaite}}\n"
-"A la fin de la Manche 10, si aucun Joueur ne contrôle la Ville Aléatoire, les deux Joueurs perdent la partie (\\textit{le souverain local revient à son château et reprend le contrôle de la province}).\n"
+"À la fin de la Manche 10, si aucun Joueur ne contrôle la Ville Aléatoire, les deux Joueurs perdent la partie (\\textit{le souverain local revient à son château et reprend le contrôle de la province}).\n"
 "\n"
 
 #. type: multicols*
@@ -331,7 +331,7 @@ msgstr ""
 "\\subsection*{\\MakeUppercase{Règles Additionnelles}}\n"
 "Pendant ce Scénario:\n"
 "\\begin{itemize}\n"
-"  \\item A la première Visite d'un Obélisque, le Joueur Visitant lance 2 \\svg{resource} et résous les deux résultats.\n"
+"  \\item À la première Visite d'un Obélisque, le Joueur Visitant lance 2 \\svg{resource} et résout les deux résultats.\n"
 "  \\item La Ville Aléatoire est défendue par des Murs et une Porte quand une joueur l'a revendiquée, il n'a de Tourelle que si le Joueur a une Citadelle.\n"
 "  \\item Comme toute Ville, quand la Ville Aléatoire est revendiquée par un Joueur, c'est un lieu valide pour le Joueur pour:\n"
 "    \\begin{itemize}\n"
