--- a/translations/force_of_will.tex/fr.po
+++ b/translations/force_of_will.tex/fr.po
@@ -202,7 +202,7 @@ msgid ""
 "\n"
 msgstr ""
 "\\subsection*{\\MakeUppercase{Préparation des Joueurs}}\n"
-"\\textbf{Nombre de Joueurs:} 2 ou 3\n"
+"\\textbf{Nombre de Joueurs :} 2 ou 3\n"
 "\n"
 
 #. type: multicols*
@@ -306,7 +306,7 @@ msgid ""
 "\n"
 msgstr ""
 "\\subsection*{\\MakeUppercase{Conditions de Défaite}}\n"
-"A la fin de la Manche 12, si il n'y a pas de gagnant, chaque Joueur perd le Scénario.\n"
+"À la fin de la Manche 12, s'il n'y a pas de gagnant, chaque Joueur perd le Scénario.\n"
 "\n"
 
 #. type: multicols*
@@ -335,7 +335,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{Manches 5 et 9 (Scénario 2 Joueurs uniquement):}\n"
+"\\textbf{Manches 5 et 9 (Scénario 2 Joueurs uniquement) :}\n"
 "\\begin{itemize}\n"
 "  \\item Le Joueur 2 gagne 1 \\svg{movement}.\n"
 "\\end{itemize}\n"
@@ -365,7 +365,7 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"  \\item Quand un Joueur Visite un Obélisque, il lance 2 \\svg{treasure} et choisit un résultat.\n"
+"  \\item Quand un Joueur Visite un Obélisque, il lance 2 \\svg{treasure} et en choisit un résultat.\n"
 "  \\item Diplomatie est interdite pour éviter le combat de la Case des Terres Désolées.\n"
 "  \\item Quand un Héros se déplace sur la Case des Terres Désolées, il doit combattre, en fonction de la difficulté choisie, les Unités Neutres suivantes:\n"
 "  \\begin{itemize}\n"
