--- a/translations/inferno_devilish_plan.tex/fr.po
+++ b/translations/inferno_devilish_plan.tex/fr.po
@@ -700,7 +700,7 @@ msgid ""
 msgstr ""
 "\\textbf{Manche 13:}\n"
 "\\begin{itemize}\n"
-"  \\item A la fin de la Manche, si le Héros Ennemi et l'Armée des Dragons d'Or ne sont pas vaincus, tout est perdu -- vous perdez!\n"
+"  \\item À la fin de la Manche, si le Héros Ennemi et l'Armée des Dragons d'Or ne sont pas vaincus, tout est perdu -- vous perdez !\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -716,7 +716,7 @@ msgid ""
 msgstr ""
 "\\textbf{Quand vous complétez le Scénario:}\n"
 "\\begin{itemize}\n"
-"  \\item Lisez: Félicitations! Vous avez complété votre quête de tuer ces redoutables bêtes et revendiqué la victoire!''\n"
+"  \\item Lisez : Félicitations ! Vous avez complété votre quête de tuer ces redoutables bêtes et revendiqué la victoire !''\n"
 "\\end{itemize}\n"
 "\n"
 
