--- a/translations/sentinels.tex/fr.po
+++ b/translations/sentinels.tex/fr.po
@@ -60,7 +60,7 @@ msgid ""
 "\\textbf{Author:} silence70011\n"
 "\n"
 msgstr ""
-"\\textbf{Auteur:} silence70011\n"
+"\\textbf{Auteur :} silence70011\n"
 "\n"
 
 #. type: multicols
@@ -171,7 +171,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{Unités de Départ:}\n"
+"\\textbf{Unités de Départ :}\n"
 "\\begin{itemize}\n"
 "  \\item Une Unité Groupe \\svg{bronze} avec le coût de Recrutement le plus \\textit{faible}\n"
 "  \\item Une Unité Quelques \\svg{bronze} avec le coût de Recrutement le plus \\textit{élevé}\n"
@@ -369,7 +369,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{7$^{e}$ et 8$^{e}$ Manches :}\n"
+"\\textbf{Manches 7 et 8 :}\n"
 "\\begin{itemize}\n"
 "  \\item Faire apparaître une armée ennemie en suivant les règles ci-dessous.\n"
 "\\end{itemize}\n"
@@ -385,7 +385,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{9$^{e}$ Manche:}\n"
+"\\textbf{Manche 9 :}\n"
 "\\begin{itemize}\n"
 "  \\item Répéter les évènements de la Manche 6.\n"
 "\\end{itemize}\n"
@@ -580,7 +580,7 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"  \\item A la Manche 10, une Armée de Boss apparaît. Elle est différente des précédentes car elle est Renforcée par une réserve d'Unités Neutres (Réserve de Renfort = nombre entre parenthèses dans la table).\n"
+"  \\item À la Manche 10, une Armée de Boss apparaît. Elle est différente des précédentes car elle est Renforcée par une réserve d'Unités Neutres (Réserve de Renfort = nombre entre parenthèses dans la table).\n"
 "  \\item Au début du 2$^{e}$ Tour de Combat et chaque Tour suivant, 2 Unités Renforcent l'armée restante de la Réserve de Renforts mélangée (maximum 5 Unités) pour continuer le combat jusqu'à la fuite ou la victoire totale du Joueur. \\textit{Si le nombre d'Unités ennemies est de 1 ou moins au début d'un Tour de Combat, piochez jusqu'à un total de 4 Unités ( il y a toujours 4 ou 5 Unités sur le Plateau après Renfort, si possible).}\n"
 "  \\item Placez les Renforts sur leur ligne de base, en commençant par la gauche avec l'Initiative la plus basse (Unités \\svg{unit_ranged} en premier). Si besoin, continuez sur la ligne suivante dans le même ordre.\n"
 "  \\item Si un Joueur fuit, l'Armée Ennemie pioche jusqu'à un minimum de 4 Unités comme Unités de Départ pour le prochain combat.\n"
