--- a/translations/the_hunt.tex/fr.po
+++ b/translations/the_hunt.tex/fr.po
@@ -67,7 +67,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{Unités de Départ:}\n"
+"\\textbf{Unités de Départ :}\n"
 "\\begin{itemize}\n"
 "  \\item Une Unité Groupe \\svg{bronze} avec le coût de Recrutement le plus \\textit{faible}\n"
 "  \\item Une Unité Quelques \\svg{bronze} avec le coût de Recrutement le plus \\textit{élevé}\n"
@@ -131,7 +131,7 @@ msgid ""
 "\n"
 msgstr ""
 "\\subsection*{\\MakeUppercase{Préparation des Joueurs}}\n"
-"\\textbf{Nombre de Joueurs:} 2 ou 3\n"
+"\\textbf{Nombre de Joueurs :} 2 ou 3\n"
 "\n"
 
 #. type: multicols*
@@ -793,7 +793,7 @@ msgstr ""
 "Combat, le premier Dragon Féérique ciblé n'est qu'un simple Mirage.  Il "
 "inflige des dégâts, mais disparaît du Plateau à la première touche ennemie.  "
 "\\item Capacité des Sylvaniens: Chaque Sylvanien possède une partie du "
-"pouvoir du Dragon Féérique.  A la mort du 2ème Sylvanien, retirez un Sort du "
+"pouvoir du Dragon Féérique. À la mort du 2ème Sylvanien, retirez un Sort du "
 "Grimoire du Dragon, en commençant par le 3ème.  Diminuer de 1 \\svg{empower} "
 "(en commençant par le maximum) en vainquant le 2ème, 3ème et 4ème "
 "Sylvanien.  Sans Sylvanien, le Dragon perd sa capacité à lancer des Sorts.  "
