Apply suggestions from code review
Co-authored-by: Legrecofr <166880894+Legrecofr@users.noreply.github.com>

--- a/translations/castle_greek_gift.tex/fr.po
+++ b/translations/castle_greek_gift.tex/fr.po
@@ -169,7 +169,7 @@ msgid ""
 "While Catherine grapples with her responsibility — and her demons — she must be a bulwark against evil.}\n"
 "\n"
 msgstr ""
-"\\textit{Steadwick est libre, mais cela ne veut pas dire que nous sommes en sécurité.\n"
+"\\textit{Steadwick est libre, mais nous ne sommes pas en sécurité.\n"
 "De sombres puissances errent toujours en Erathia et l'une d'elles déplace déjà ses pions sur l'échiquier.\n"
 "Alors que Catherine se débat avec ses responsabilités — et ses démons — elle doit être le rempart contre le mal.}\n"
 "\n"
