--- a/translations/force_of_will.tex/fr.po
+++ b/translations/force_of_will.tex/fr.po
@@ -365,7 +365,7 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"  \\item Quand un Joueur Visite un Obélisque, il lance 2 \\svg{treasure} et en choisit un résultat.\n"
+"  \\item Quand un Joueur Visite un Obélisque, il lance 2 \\svg{treasure} et choisit un résultat.\n"
 "  \\item Diplomatie est interdite pour éviter le combat de la Case des Terres Désolées.\n"
 "  \\item Quand un Héros se déplace sur la Case des Terres Désolées, il doit combattre, en fonction de la difficulté choisie, les Unités Neutres suivantes:\n"
 "  \\begin{itemize}\n"
