[FR] fix typos (#383)
Co-authored-by: Legrecofr <166880894+Legrecofr@users.noreply.github.com>

--- a/translations/force_of_will.tex/fr.po
+++ b/translations/force_of_will.tex/fr.po
@@ -202,7 +202,7 @@ msgid ""
 "\n"
 msgstr ""
 "\\subsection*{\\MakeUppercase{Préparation des Joueurs}}\n"
-"\\textbf{Nombre de Joueurs:} 2 ou 3\n"
+"\\textbf{Nombre de Joueurs :} 2 ou 3\n"
 "\n"
 
 #. type: multicols*
@@ -306,7 +306,7 @@ msgid ""
 "\n"
 msgstr ""
 "\\subsection*{\\MakeUppercase{Conditions de Défaite}}\n"
-"A la fin de la Manche 12, si il n'y a pas de gagnant, chaque Joueur perd le Scénario.\n"
+"À la fin de la Manche 12, s'il n'y a pas de gagnant, chaque Joueur perd le Scénario.\n"
 "\n"
 
 #. type: multicols*
@@ -335,7 +335,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{Manches 5 et 9 (Scénario 2 Joueurs uniquement):}\n"
+"\\textbf{Manches 5 et 9 (Scénario 2 Joueurs uniquement) :}\n"
 "\\begin{itemize}\n"
 "  \\item Le Joueur 2 gagne 1 \\svg{movement}.\n"
 "\\end{itemize}\n"
