--- a/translations/what_to_play.tex/fr.po
+++ b/translations/what_to_play.tex/fr.po
@@ -57,7 +57,7 @@ msgid ""
 "Follow these suggestions if you're not sure which Scenario is best for you.\n"
 "\n"
 msgstr ""
-"Suiez ces suggestions si vous n'est sur du Scénario à choisir.\n"
+"Suivez ces suggestions si vous n'êtes pas sûr du Scénario à choisir.\n"
 "\n"
 
 #. type: multicols
@@ -79,8 +79,8 @@ msgid ""
 "For more tactical play for two players, try \\pagelink{Sentinels}{Sentinels}.\n"
 "\n"
 msgstr ""
-"Si vous êtes nouveau joueur et voulez essayer \\textbf{d'apprendre les règles}, commencez avec \\pagelink{Emerald Island}{L'Ile d'Emeraude}.\n"
-"Pour une grande aventure \\textbf{jusque 6 joueurs} avec un combat épique à la fin, essayez \\pagelink{Titans' Stronghold}{La Forteresse des Titans}.\n"
+"Si vous êtes nouveau joueur et voulez essayer \\textbf{d'apprendre les règles}, commencez avec \\pagelink{Emerald Island}{L'Île d'Émeraude}.\n"
+"Pour une grande aventure \\textbf{jusqu'à 6 joueurs} avec un combat épique à la fin, essayez \\pagelink{Titans' Stronghold}{La Forteresse des Titans}.\n"
 "Pour un jeu plus tactique à deux joueurs, essayez \\pagelink{Sentinels}{Sentinelles}.\n"
 "\n"
 
@@ -105,7 +105,7 @@ msgid ""
 msgstr ""
 "Si vous aimez jouer à 2 ou 4 joueurs un Scénario «Capturer le Graal» avec des twists intéressant, essayez \\pagelink{Bloody Grail}{Graal Sanglant}.\n"
 "Pour un combat de Boss excitant pour 2-3 joueurs, choisissez \\pagelink{The Hunt}{La Chasse}.\n"
-"Pour une bataille épique innévitable entre 2 joueurs avec un siège possible, jouez \\pagelink{Dragoncurse Castle}{Château Dragoncurse}.\n"
+"Pour une bataille épique inévitable entre 2 joueurs avec un siège possible, jouez \\pagelink{Dragoncurse Castle}{Château Dragoncurse}.\n"
 "\n"
 
 #. type: multicols
@@ -145,7 +145,7 @@ msgid ""
 "For information regarding your play time, strategizing, and custom rules, check out \\pagelink{Recommendations}{Recommendations} at the end of this book.\n"
 "\n"
 msgstr ""
-"Pour des informations concernant le temps de jeu, la stratégie, et les règles maisons, vérifiez \\pagelink{Recommendations}{Recommandations} à la fin de ce libre\n"
+"Pour des informations concernant le temps de jeu, la stratégie, et les règles maisons, vérifiez \\pagelink{Recommendations}{Recommandations} à la fin de ce livre.\n"
 "\n"
 
 #. type: Plain text
