--- a/main_ru.tex
+++ b/main_ru.tex
@@ -4,18 +4,14 @@
 % Language setting
 \usepackage[TU]{fontenc}
 \usepackage[russian]{babel}
-\usepackage{fontspec}
-\setmainfont[
-  Path = ./assets/fonts/,
-  Extension = .ttf,
-  UprightFont = *-Regular,
-  ItalicFont = *-Italic,
-  BoldFont = *-Bold,
-  BoldItalicFont = *-BoldItalic]{LiberationSerif}
 
 \def\sections{sections/translated/ru}
 
 \newcommand{\notefont}[0]{}
+\AtBeginDocument{
+  \liberation
+  \selectfont
+}
 
 \input{metadata.tex}
 
