--- a/draft-scenarios/clash/race_for_the_dragon_isle.tex
+++ b/draft-scenarios/clash/race_for_the_dragon_isle.tex
@@ -14,7 +14,7 @@
 12 Rounds
 
 \subsection*{\MakeUppercase{Player Setup}}
-\textbf{Player Count:} 2 -- 7
+\textbf{Player Count:} 2--7
 
 \textbf{Starting Resources:} 15 \svg{gold}, 4 \svg{building_materials}, 1 \svg{valuables}
 
@@ -28,7 +28,7 @@
 
 \textbf{Town Buildings:} \svg{bronze} Dwelling
 
-\textbf{Map Tile Pool:} Each player takes 2 random Far (II–III) and 2 random Near (IV–V) Map Tiles (one with Obelisk, and one without).
+\textbf{Map Tile Pool:} Each player takes 2 random Far (II–III) and 2 random Near (IV–V) Map Tiles (one with Obelisk and one without).
 
 \subsection*{\MakeUppercase{Map Setup}}
 Take the following Map Tiles and arrange them as shown in the Scenario map layout ($P$ stands for the number of players):
@@ -40,7 +40,7 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
 \end{itemize}
 
 \subsection*{\MakeUppercase{Victory Conditions}}
-First player to start their turn while controlling a Dragon Utopia wins the game. If two players control the two Utopias at the end of Round 12, those players draw Cards to their \svg{hand} Limit and engage in a final Combat. The winner of that Combat wins the game.
+First player to start their turn while controlling a Dragon Utopia wins the game. If two players control the two Utopias at the end of Round 12, those players draw Cards up to their \svg{hand} Limit and engage in a final Combat. The winner of that Combat wins the game.
 
 \subsection*{\MakeUppercase{Defeat Conditions}}
 If no Dragon Utopia has been captured by the end of Round 12, all players lose.
@@ -64,15 +64,15 @@ Map:
 \begin{itemize}
   \item The Map Tile with the Obelisk must be discovered last.
   \item Turns are played simultaneously until the first player teleports to \#F10.
-  \item First player to teleport is the first player for the rest of the Rounds.
+  \item First player to teleport becomes the first player for the remainder of the game.
   \item Players cannot connect to another player's area.
   \item Blocked Fields on Starting Map Tiles are inactive two-way Portals.
   \item The Obelisks on the Near Tiles are two-way Portals.
-  \item Each Obelisk is guarded by a Level VI Combat and the Portals are activated when that Combat is defeated.
+  \item Each Obelisk is guarded by a Level VI Combat and the Portal is activated when that Combat is defeated.
 \end{itemize}
 Dragon Isle:
 \begin{itemize}
-  \item The Blocked \#F10 Field is a two-way Portal and a Sanctuary. Multiple players can be on the Sanctuary at the same time.
+  \item The Blocked \#F10 Field is a two-way Portal and a Sanctuary. Multiple players can occupy the Sanctuary simultaneously.
   \item Draw only Dragons for \svg{golden} and \svg{azure} Units.
   \item Add 1 × \svg{bronze} and 1 × \svg{silver} Special Dragon Unit to all Level VII Combats.
 \end{itemize}
