--- a/draft-scenarios/clash/race_for_the_dragon_isle.tex
+++ b/draft-scenarios/clash/race_for_the_dragon_isle.tex
@@ -8,7 +8,7 @@
 
 \textbf{Source:} \href{https://discord.com/channels/740870068178649108/1248684870696304660}{Archon Studios Discord}
 
-\textit{Flavor text here.}  % no-check-caps
+\textit{Beyond the shrouded sea lies Dragon Isle, a place whispered of in taverns and feared in legends. Only those reckless enough to chase glory — and foolish enough to disturb dragons — dare to race toward its shores.}  % no-check-caps
 
 \subsection*{\MakeUppercase{Scenario Length}}
 12 Rounds
