--- a/translations/castle_two_knights_defense.tex/fr.po
+++ b/translations/castle_two_knights_defense.tex/fr.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
 "POT-Creation-Date: 2025-11-06 23:19+0100\n"
-"PO-Revision-Date: 2025-11-19 13:49+0100\n"
+"PO-Revision-Date: 2025-11-19 14:08+0100\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
 "Language: fr\n"
@@ -144,7 +144,7 @@ msgid ""
 "This Scenario plays out over 8 Rounds.\n"
 "\n"
 msgstr ""
-"Ce scénario se joue en 8 Manches.\n"
+"Ce Scénario se joue en 8 Manches.\n"
 "\n"
 
 #. type: multicols*
@@ -410,7 +410,7 @@ msgid ""
 "\\textbf{Enemy Army:} A Pack of Skeletons, a Pack of Zombies, a Pack of Liches, a Pack of Dread Knights\n"
 "\n"
 msgstr ""
-"\\textbf{Armée Ennemie:} Groupe de Squelettes, Groupe de Zombies, Groupe de Liches, Groupes de Chevaliers de l'Effroi\n"
+"\\textbf{Armée Ennemie:} Groupe de Squelettes, Groupe de Zombies, Groupe de Liches, Groupe de Chevaliers de l'Effroi\n"
 "\n"
 
 #. type: multicols*
