--- a/translations/castle_two_knights_defense.tex/pl.po
+++ b/translations/castle_two_knights_defense.tex/pl.po
@@ -621,7 +621,7 @@ msgstr ""
 "Stare legendy mówiły o pradawnej Smoczej Utopii na pustkowiach.\n"
 "Vhidhax zapewne usiłuje pokonać majestatyczne stworzenia i użyć ich przeciwko niej w desperackim akcie.\n"
 "Zmarszczyła brwi na myśl o tym, że jej osłabiony wróg miałby pokonać smoki.\n"
-"Ale jeśli mu się uda... Jeśli coś przeoczła, wróg odzyska dość sił, by pokonać jej nadwątlone wojska.\n"
+"Ale jeśli mu się uda\\ldots Jeśli coś przeoczła, wróg odzyska dość sił, by pokonać jej nadwątlone wojska.\n"
 "Zacisnęła pięść, miażdżąc kruchy papier w proch, po czym pobiegła do drzwi, by zebrać kogo się da.\n"
 "\n"
 
@@ -660,8 +660,8 @@ msgid ""
 "``Then tell them to get ready; the race is on.''\n"
 "\n"
 msgstr ""
-"Katarzyna uśmiechnęła się szeroko.\n"
-"\\dialogg{W takim razie powiedz im, żeby się przygotowali; wyścig się zaczyna.}\n"
+"Katarzyna uśmiechnęła się szeroko.\\\\\n"
+"\\dialog{W takim razie powiedz im, żeby się przygotowali; wyścig się zaczyna.}\n"
 "\n"
 
 #. type: multicols*
@@ -731,7 +731,7 @@ msgid ""
 "Her duty fulfilled and her seat secure, Catherine would see Steadwick rebuilt with Erathia just a little safer… for now.\n"
 "\n"
 msgstr ""
-"Wypełniwszy obowiązek i zabezpieczywszy tron, Katarzyna dopilnuje, by Steadwick zostało odbudowane, a Erathia stała się nieco bezpieczniejsza... przynajmniej na razie.\n"
+"Wypełniwszy obowiązek i zabezpieczywszy tron, Katarzyna dopilnuje, by Steadwick zostało odbudowane, a Erathia stała się nieco bezpieczniejsza\\ldots przynajmniej na razie.\n"
 "\n"
 
 #. type: multicols*
@@ -854,8 +854,8 @@ msgid ""
 "``Well? Are we going inside?'' he asked curiously.\n"
 "\n"
 msgstr ""
-"Rion szybko podjechał, jadąc kłusem na swoim wierzchowcu.\n"
-"\\dialogg{I co? Wchodzimy do środka? -- zapytał.}\n"
+"Rion szybko podjechał, jadąc kłusem na swoim wierzchowcu.\\\\\n"
+"\\dialog{I co? Wchodzimy do środka? -- zapytał.}\n"
 "\n"
 
 #. type: multicols*
@@ -868,10 +868,11 @@ msgid ""
 "Gods know we need it…''\n"
 "\n"
 msgstr ""
-"\\dialogg{Nie ma takiej potrzeby -- odparła Katarzyna -- \n"
+"\\vspace{-0.3em}\n"
+"\\dialog{Nie ma takiej potrzeby -- odparła Katarzyna -- \n"
 "Widziałam to w jej oczach; smoczyca wie, co dziś zrobiliśmy.\n"
 "Mamy ich wdzięczność, a być może i przysługę do wykorzystania w przyszłości.\n"
-"Bogowie raczą wiedzieć, że jej potrzebujemy...}\n"
+"Bogowie raczą wiedzieć, że jej potrzebujemy\\ldots}\n"
 "\n"
 
 #. type: multicols*
@@ -909,7 +910,7 @@ msgstr ""
 "Rzeczywistość uderzyła do głowy, gdy opadła adrenalina i euforia po ciężko wywalczonym zwycięstwie.\n"
 "Pole bitwy było potwornym koszmarem.\n"
 "Zwłoki Upiornych Smoków rozwiewały się w nicość, gdy ostatki ich mocy umierały wraz z nimi, a porozrzucane, połamane ciała obu stron leżały w krwawych skupiskach.\n"
-"Cena zwycięstwa była wysoka...\n"
+"Cena zwycięstwa była wysoka\\ldots\n"
 "\n"
 
 #. type: multicols*
