--- a/translations/castle_sicilian_dragon.tex/pl.po
+++ b/translations/castle_sicilian_dragon.tex/pl.po
@@ -254,7 +254,7 @@ msgid ""
 "{2. Sicilian Dragon}{\\images/catherine.png}"
 msgstr ""
 "\\addscenariosection[subsection]{1}{Kampania Zamku $-$ Gambit Królowej}{2. "
-"Smok Sycylijski}{\\images/catherine.png}"
+"Smoczyca Sycylijska}{\\images/catherine.png}"
 
 #. type: multicols
 #: campaigns/castle_sicilian_dragon.tex:12
@@ -650,7 +650,7 @@ msgstr ""
 "Rion podjechał do niej, dopijając ostatnie krople z bukłaka.\n"
 "Otarł z twarzy resztki wody i pot, zanim się odezwał.\\\\\n"
 "\\dialog{Kiepskie miejsce na bitwę.\n"
-"Pomijając fatalne warunki, słyszałem, że tubylcy są dość... dzicy.}\n"
+"Pomijając fatalne warunki, słyszałem, że tubylcy są dość\\ldots dzicy.}\n"
 "\n"
 
 #. type: multicols*
@@ -741,7 +741,7 @@ msgstr ""
 "Po chwili zwrócił się do Katarzyny.\\\\\n"
 "\\dialog{To kamień transportowy -- powiedział --\n"
 "Jak monolit, ale o mniejszym zasięgu.\n"
-"Przynajmniej... kiedyś tak było.\n"
+"Przynajmniej\\ldots kiedyś tak było.\n"
 "Jest uszkodzony, a runy, które powinny pulsować silną magią i świecić, są teraz ciemne i pozbawione jakiejkolwiek mocy.}\n"
 "\n"
 
@@ -865,7 +865,7 @@ msgid ""
 "She looked back at the ragtag group of forces she'd gathered and hoped it would be enough for a siege.\n"
 "\n"
 msgstr ""
-"Katarzyna uśmiechnęła się, kładąć dłoń na ramieniu anioła w podziękowaniu za jego pracę.\n"
+"Katarzyna uśmiechnęła się, kładąc dłoń na ramieniu anioła w podziękowaniu za jego pracę.\n"
 "Spojrzała na pospiesznie zebraną armię, mając nadzieję, że sprosta oblężeniu.\n"
 "\n"
 
@@ -971,7 +971,7 @@ msgid ""
 "The Archangels are too few to continue; what hope do we have?''\n"
 "\n"
 msgstr ""
-"\\dialogg{Ale... nasze siły.\n"
+"\\dialogg{Ale\\ldots nasze siły.\n"
 "Archaniołów jest zbyt mało, by ruszyć dalej; na co możemy liczyć?}\n"
 "\n"
 
@@ -998,7 +998,7 @@ msgid ""
 "\n"
 msgstr ""
 "\\dialogg{To głupota -- westchnął Rion --\n"
-"Nie musimy walczyć tak zaciekle. Vhidhax nie jest twoim ojcem, Katarzyno...}\n"
+"Nie musimy walczyć tak zaciekle. Vhidhax nie jest twoim ojcem, Katarzyno\\ldots}\n"
 "\\columnbreak\n"
 "\n"
 
