--- a/translations/language_metadata.tex/fr.po
+++ b/translations/language_metadata.tex/fr.po
@@ -22,6 +22,8 @@ msgid ""
 "\\providecommand{\\documenttitle}{Heroes of Might \\& Magic III Fan-Made "
 "Mission Book}"
 msgstr ""
+"\\providecommand{\\documenttitle}{Heroes of Might \\& Magic III Fan-Made "
+"Livre de Missions}"
 
 #. type: Plain text
 #: sections/language_metadata.tex:4
