updated wording for starting units

--- a/draft-scenarios/clash/dragnarok.tex
+++ b/draft-scenarios/clash/dragnarok.tex
@@ -22,7 +22,7 @@
 \textbf{Starting Units:}
 
 \begin{itemize}
-  \item 2 × A Pack of cheapest \svg{bronze} Units
+  \item A Pack of the two cheapest \svg{bronze} Units
   \item A Few chosen \svg{bronze} Units
 \end{itemize}
 
